2007-09-17  David Smith  <dsmith@redhat.com>

	PR 1154
	* stapprobes.5.in: Documented procfs probes.

	* tapsets.cxx (procfs_builder::build): Validate procfs path.

2007-09-14  David Smith  <dsmith@redhat.com>

	PR 1154
	* tapsets.cxx
	(procfs_var_expanding_copy_visitor::visit_target_symbol):
	Disallows reading from $value in a procfs read probe.
	
2007-09-14  David Smith  <dsmith@redhat.com>

	PR 1154
	* tapsets.cxx (procfs_derived_probe_group::emit_module_init):
	Fixed problem where if only one type (read/write) of procfs probe
	was defined, the generated code wouldn't compile.

2007-09-13  David Smith  <dsmith@redhat.com>

	PR 1154
	* tapsets.cxx (procfs_derived_probe::procfs_derived_probe):
	Removed debug print.
	(procfs_derived_probe_group::emit_module_decls): Improved error
	handling and added support for procfs.write probes.
	(procfs_var_expanding_copy_visitor::visit_target_symbol): Removed
	debug print.

2007-09-12  Frank Ch. Eigler  <fche@elastic.org>

	* parse.cxx (parse_symbol): Accept println(@hist*()).

2007-09-12  Frank Ch. Eigler  <fche@elastic.org>

	PR 5023
	* translate.cxx (c_unparser::visit_literal_number): Support LLONG_MIN.
	(visit_unary_expression): Likewise.

2007-09-12  Martin Hunt  <hunt@redhat.com>

	PR 5019
	* elaborate.cxx (visit_hist_op): Remove log histogram param.
	* translate.cxx (assert_hist_compatible): Ditto.
	* staptree.cxx (hist_op::print): Ditto.
	* session.h (statistic_decl): Ditto.
	
	* parse.cxx (expect_number): Allow negative numbers.
	Also validate that input is really numeric. This is used 
	by histograms to get the parameters.
	(parse_hist_op_or_bare_name): Remove code to get parameter
	for log histograms. 

2007-09-12  David Smith  <dsmith@redhat.com>

	* translate.cxx (c_unparser::emit_common_header): Added 'data'
	variable to context structure to support procfs probes.
	* tapsets.cxx: Improved procfs probe handling.

2007-09-10  David Smith  <dsmith@redhat.com>
